src/objects/Short_URL__c.object
<CustomObject>
    <fields>
        <fullName>Clicks__c</fullName>
        <label>Clicks</label>
        <summaryForeignKey>Short_URL_Click__c.Short_URL__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Custom_URL__c</fullName>
        <inlineHelpText>Optional custom shortened URL.</inlineHelpText>
        <label>Custom URL</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hashed_URL__c</fullName>
        <label>Hashed URL</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Short_URL__c</fullName>
        <formula>if(  AND( Custom_URL__c != null, LEN( Custom_URL__c ) &gt; 0 ), Custom_URL__c,  Hashed_URL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>URL to shorten.</inlineHelpText>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Short URL</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Short URL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Short URLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>